# mslab_discord_bot

./: .env.example  .gitignore  README.md  bot.py  bot_test.ipynb  check_meeting_time.py  check_webpage.py  database.py  help_for_create_service.sh  prepare.sh  pyproject.toml  requirements.txt  run.sh  test.py  test_server_status.py
addemoji/: addemoji.py
check_meeting_time/: check_meeting_time.py  cmt.py  test.ipynb
check_server_status/: check_server_status.py
database/: create_meeting_times_database.py  database.py  db.py
papergpt/: papergpt.py
processing_message/: openaiapi.py  processing_message.py  record.py
tests/: test_check_can_fetch_webpage.py
workstation/: nv.sh  nv_1.sh  nv_2.sh
